part1/1_9/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dev-kub-pingpong
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dev-kub-pingpong
  template:
    metadata:
      labels:
        app: dev-kub-pingpong
    spec:
      containers:
        - name: dev-kub-pingpong
          image: niklasku/dev_kub_pingpong:1_9
