part1/1_9/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dev-kub-pingpong-svc
spec:
  type: ClusterIP
  selector:
    app: dev-kub-pingpong
  ports:
    - port: 2346
      protocol: TCP
      targetPort: 3001
